-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.0, 6.5.1
-
9831b38fc (dev), 0f2798762 (6.6), f07b73c5c (6.5)
pragma ComponentBehavior:Bound causes delegate component of MonthGrid to warn about 'QQmlContext: Cannot set property on internal context'. A trivial delegate: Rectangle{} or delegate: Text{} (or probably any custom delegate I think) can cause the warning.
However, this warning message is not observed for similar model/view items such as ListView or GridView. A MonthGird with no custom delegate component does not show the problem either. So far, only MothGrid with custom delegate exhibits such behavior.