MonthGrid: remove "pressed" context property

This isn't documented or tested, and it's possible to
achieve using interactive controls like ItemDelegate
or e.g. TapHandler.

Fixes: QTBUG-114358
Change-Id: If9ac3d74f30439db774386eb5d598d8116997979
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit 9831b38fc592bedd6fb9487a016846dbad246fb7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>